--- a/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
@@ -53,7 +53,7 @@
 .card__title {
     min-height: gs-height(1);
     margin-bottom: $gs-baseline;
-    border-top: 2px solid $grey;
+    border-top: 2px solid $c-neutral2;
 
     font-family: $serifheadline !important;
     font-size: 18px !important;
@@ -63,7 +63,7 @@
     @include box-sizing(border-box);
 }
 .card__body {
-    border-top: 1px solid $grey;
+    border-top: 1px solid $c-neutral2;
     padding: $baseline*1.5 0 $baseline*6;
     position: relative;
     @include box-sizing(border-box);
@@ -80,7 +80,7 @@
 
     .relative-timestamp {
         float: left;
-        color: $grey;
+        color: $c-neutral2;
         position: relative;
         padding: 0 $gs-gutter/2 0 16px;
         min-width: gs-span(1) - 16;
@@ -96,11 +96,11 @@
     .trail__count {
         position: static;
         float: left;
-        color: $grey;
+        color: $c-neutral2;
         margin-left: 4px;
 
         a {
-            color: $grey;
+            color: $c-neutral2;
             margin-left: $gs-gutter/2 - 1;
         }
 
